# GeoChain

./: .clang-format  .gitignore  CMakeLists.txt  QuadrangleTools.cpp  ReadMe.md  config.json  demo  demo.cpp  log_flusher.sh  main  main.cpp
Arithmetics/: BasicArithmetics.h  ElementaryArithmetics.h  Sequence.h
Elements/: BasicElements.h  ElementaryElements.h  ReadMe.md  test.cpp
Log/: demo.INFO  demo.chenzhou.chenzhou.log.INFO.@20210107-171700.32068  demo.chenzhou.chenzhou.log.INFO.@20210107-174258.4216
SweepLine/: SweepLineAlgo.cpp
Topics/Line Segment Intersection/: PlaneSweepAlgorithm.h  ReadMe.md  TrivialTraversalAlgorithm.h  analysis.py
UnderDev/PolygonUtils/: PolygonUtils.cpp  PolygonUtils.h
Utils/: ConfigLoader.h  Global.h  LogGuardian.h  Timer.h  Visualizer.h
Vessels/: BinaryTree.h  DoublyConnectedEdgeList.h  ReadMe.md
Visualizers/: Visualizer2D.h
